--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
 header {
   text-align: center;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -11,19 +5,21 @@ header {
   color: greenyellow;
 }
 
-.navbar {
-  font-size: x-large;
+.navbar, .navbar .navbar-brand {
+  justify-content: center;
+  align-items: center;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: greenyellow;
+  background-color: gray;
+  font-size: x-large;
+  font-weight: 400;
 }
 .navbar .navbar-brand {
-  background-color: gray;
-  color: greenyellow;
   border-color: greenyellow;
   border-style: groove;
-  font-size: xx-large;
   border-width: 5px;
   border-radius: 10px;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: xx-large;
 }
 
 .btn {
@@ -36,21 +32,25 @@ header {
   text-align: center;
 }
 .promos h2 {
+  justify-content: center;
+  align-items: center;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  background-color: gray;
   color: greenyellow;
+  background-color: gray;
+  font-size: x-large;
   border-color: greenyellow;
   border-style: groove;
-  font-size: xx-large;
   border-width: 5px;
   border-radius: 10px;
-  text-align: center;
+  font-weight: 400;
+  font-size: xx-large;
 }
 
 #cartas {
   text-align: center;
   align-items: center;
   justify-content: center;
+  font-weight: 600;
 }
 
 footer {
@@ -76,88 +76,49 @@ footer .container__footer {
 }
 
 .box__footer .nosotros {
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  color: greenyellow;
   border-color: greenyellow;
   border-style: groove;
-  font-size: xx-large;
   border-width: 5px;
   border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: greenyellow;
+  background-color: gray;
+  font-size: x-large;
 }
 
 .box__footer .redes {
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  color: greenyellow;
   border-color: greenyellow;
   border-style: groove;
-  font-size: xx-large;
   border-width: 5px;
   border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: greenyellow;
+  background-color: gray;
+  font-size: x-large;
 }
 
 .box__footer a {
   margin-top: 10px;
   color: greenyellow;
-  font-weight: 600;
+  font-weight: 800;
 }
 .box__footer a:hover {
   opacity: 0.3;
 }
 
 form {
-  background-color: gray;
-  color: greenyellow;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: x-large;
-  align-items: center;
-  text-align: center;
   justify-content: center;
-}
-
-/* keyframes */
-@keyframes logo_animado {
-  25% {
-    transform: scale(1.1, 1.1);
-  }
-  50% {
-    transform: scale(1.2, 1.2);
-  }
-  75% {
-    transform: scale(1.1, 1.1);
-  }
-  100% {
-    transform: scale(1.1, 1.1);
-  }
-  to {
-    transform: scale(1, 1);
-  }
-}
-h1 {
-  animation-name: logo_animado;
-  animation-duration: 5s;
-  animation-iteration-count: infinite;
-}
-h1 .logo {
-  animation-name: logo_animado;
-  animation-duration: 5s;
-  animation-iteration-count: infinite;
-}
-
-@keyframes slidein {
-  from {
-    margin-left: 50%;
-    width: 50%;
-  }
-  to {
-    margin-left: 0%;
-    width: 50%;
-  }
-}
-h2 {
-  animation-duration: 3s;
-  animation-name: slidein;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+  align-items: center;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: greenyellow;
+  background-color: gray;
+  font-size: x-large;
+  font-weight: 400;
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
