--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,32 +1,23 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-} 
+@import "variables";
+@import "mixins";
+ 
 header {
     text-align:center ;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     background-image: radial-gradient(grey, black);
-    color: greenyellow;
-    
+    color: greenyellow;  
 }
 
-
 .navbar {
-    font-size:x-large;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    @include tipografia;
+    font-weight: map-get($font-weights, small);
+  
         .navbar-brand {
-            background-color: gray;
-            color: greenyellow;
-            border-color: greenyellow;
-            border-style:groove;
-            font-size:xx-large;
-            border-width: 5px;
-            border-radius: 10px;
-            font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-                
+            @extend .navbar;
+            @include bordes;
+            font-size: xx-large;
         }
-}   
+} 
 
 .btn {
     background-color: greenyellow;
@@ -37,15 +28,10 @@ header {
 .promos {
     text-align: center;
         h2 {
-            font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-            background-color: gray;
-            color: greenyellow;
-            border-color: greenyellow;
-            border-style:groove;
-            font-size:xx-large;
-            border-width: 5px;
-            border-radius: 10px;
-            text-align: center;
+            @include tipografia;
+            @include bordes;
+            font-weight: map-get($font-weights, small);
+            font-size: xx-large;
         }
 }
 
@@ -53,8 +39,8 @@ header {
     text-align: center;
     align-items: center;
     justify-content: center;
+    font-weight: map-get($font-weights, medium);
 }
-
 
 footer{
    background-image: radial-gradient(gray,black);
@@ -79,95 +65,27 @@ footer{
         }
 
 .box__footer .nosotros{
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: greenyellow;
-    border-color: greenyellow;
-    border-style:groove;
-    font-size:xx-large;
-    border-width: 5px;
-    border-radius: 10px;
-            }
+    @include bordes;
+    @include tipografia; 
+}
 
 .box__footer .redes{
-                    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-                    color: greenyellow;
-                    border-color: greenyellow;
-                    border-style:groove;
-                    font-size:xx-large;
-                    border-width: 5px;
-                    border-radius: 10px;
-                }
+    @include bordes;
+    @include tipografia;
+}
             
-
 .box__footer a{
     margin-top: 10px;
     color: greenyellow;
-    font-weight: 600;
+    font-weight: map-get($font-weights, bold);
             &:hover{
                  opacity: 0.3;
-                 
             }
         }
                                                               
-
 form {
-    background-color: gray;
-    color: greenyellow;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    font-size: x-large;
-    align-items: center;
+    @include tipografia;
+    font-weight: map-get($font-weights, small);
     text-align: center;
-    justify-content: center;
 }
 
-
-/* keyframes */
-
-@keyframes logo_animado {
-    0% {}
-    25% {
-        transform:scale(1.1, 1.1);
-    }
-    50% {
-        transform:scale(1.2, 1.2);
-    }
-    75% {
-        transform:scale(1.1, 1.1);
-    }
-    100% {
-        transform:scale(1.1, 1.1);
-    }
-    to {
-        transform: scale(1, 1);
-    }
-}
-
-h1 {
-    animation-name: logo_animado;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-        .logo {
-            animation-name: logo_animado;
-            animation-duration: 5s;
-            animation-iteration-count: infinite;
-        }
-    }
-    
-@keyframes slidein {
-    from {
-        margin-left: 50%;
-        width: 50%
-      }
-    
-      to {
-        margin-left: 0%;
-        width: 50%;
-      }
-    }
-
-    h2 {
-        animation-duration: 3s;
-        animation-name: slidein;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
-      }
